--- a/tox.ini
+++ b/tox.ini
@@ -1,2 +1,6 @@
 [tox]
-envlist = py27,py36
+envlist = py27
+
+[testenv]
+deps = -rrequirements.pip
+commands=python -c "print('This project should probably have tests!')"
